@@ -11,32 +11,49 @@ import de.lessvoid.nifty.tools.Color;
 import de.lessvoid.nifty.tools.SizeValue;
 import de.lessvoid.nifty.tools.pulsate.Pulsator;
 
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+
 /**
  * Color - color overlay.
+ *
  * @author void
  */
 public class Pulsate implements EffectImpl {
-  private Color currentColor = new Color("#000f");
+  @Nonnull
+  private final Color currentColor = new Color("#000f");
+  @Nullable
   private Color startColor;
+  @Nullable
   private Color endColor;
+  @Nullable
   private SizeValue width;
+  @Nullable
   private Pulsator pulsator;
   private boolean changeColorOnly = false;
   private boolean activated = false;
 
-  public void activate(final Nifty nifty, final Element element, final EffectProperties parameter) {
+  @Override
+  public void activate(
+      @Nonnull final Nifty nifty,
+      @Nonnull final Element element,
+      @Nonnull final EffectProperties parameter) {
     startColor = new Color(parameter.getProperty("startColor", "#00000000"));
     endColor = new Color(parameter.getProperty("endColor", "#ffffffff"));
     width = new SizeValue(parameter.getProperty("width"));
-    changeColorOnly = new Boolean(parameter.getProperty("changeColorOnly", "false"));
+    changeColorOnly = Boolean.valueOf(parameter.getProperty("changeColorOnly", "false"));
     pulsator = new Pulsator(parameter, nifty.getTimeProvider());
   }
 
+  @Override
   public void execute(
-      final Element element,
+      @Nonnull final Element element,
       final float normalizedTime,
       final Falloff falloff,
-      final NiftyRenderEngine r) {
+      @Nonnull final NiftyRenderEngine r) {
+    if (startColor == null || endColor == null || width == null || pulsator == null) {
+      return;
+    }
     if (!activated && normalizedTime > 0.0f) {
       activated = true;
       pulsator.reset();
@@ -50,7 +67,7 @@ public class Pulsate implements EffectImpl {
       float value = pulsator.update();
       currentColor.linear(startColor, endColor, value);
       r.setColor(currentColor);
-  
+
       if (!changeColorOnly) {
         int size = width.getValueAsInt(element.getParent().getWidth());
         if (size == -1) {
@@ -59,13 +76,14 @@ public class Pulsate implements EffectImpl {
           r.renderQuad((element.getX() + element.getWidth() / 2) - size / 2, element.getY(), size, element.getHeight());
         }
       }
-  
+
       if (!changeColorOnly) {
         r.restoreState();
       }
     }
   }
 
+  @Override
   public void deactivate() {
     activated = true;
   }
